# Wine-Sommelier-AI

./: README.md  WINE.ipynb  pyproject.toml
data/: vinhos_completos.csv  vinicola_goes_vinhos.csv
faiss/: index.faiss  index.pkl
faiss/description/: index.faiss  index.pkl
faiss/matches/: index.pkl
web/: rag_core.py  streamlit_app.py
web/pages/: 1_Arquivos.py  2_Perguntas.py
