[project]
name = "vinho"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.6",
    "langchain-mistralai>=0.2.3",
    "ollama>=0.5.3",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.37.0",
]
